--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "chess.js": "1.0.0-beta.4",
+    "chessground": "^8.3.7",
+    "solid-chessground": "^0.0.2",
     "solid-js": "^1.6.16"
   }
 }
