--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
+    "@solid-primitives/clipboard": "^1.5.3",
     "chess.js": "1.0.0-beta.4",
     "chessground": "^8.3.7",
     "solid-chessground": "^0.0.2",
